# bilibili-mcp

./: README.md  bilibili_mcp.py  pyproject.toml
