[build-system]
requires = ["build", "setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bilibili-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
]

[project.scripts]
blbl-mcp-server = "bilibili_mcp:main"